--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
   "name": "Sample Plugin",
   "shortName": "sample",
-  "version": "0.0.2",
-  "author": "Ryan Blenis",
+  "version": "0.0.1",
+  "author": "Einar Stenberg",
   "description": "A sample plugin. Prompt for note on remote desktop disconnect.",
   "hasAdminPanel": false,
-  "homepage": "https://github.com/ryanblenis/MeshCentral-Sample",
-  "changelogUrl": "https://raw.githubusercontent.com/ryanblenis/MeshCentral-Sample/master/changelog.md",
-  "configUrl": "https://raw.githubusercontent.com/ryanblenis/MeshCentral-Sample/master/config.json",
-  "downloadUrl": "https://github.com/ryanblenis/MeshCentral-Sample/archive/master.zip",
+  "homepage": "https://github.com/OvrAp3x/MeshCentral-Sample",
+  "changelogUrl": "https://raw.githubusercontent.com/OvrAp3x/MeshCentral-Sample/master/changelog.md",
+  "configUrl": "https://raw.githubusercontent.com/OvrAp3x/MeshCentral-Sample/master/config.json",
+  "downloadUrl": "https://github.com/OvrAp3x/MeshCentral-Sample/archive/master.zip",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ryanblenis/MeshCentral-Sample.git"
+    "url": "https://github.com/OvrAp3x/MeshCentral-Sample.git"
   },
-  "versionHistoryUrl": "https://api.github.com/repos/ryanblenis/MeshCentral-Sample/tags",
+  "versionHistoryUrl": "https://api.github.com/repos/OvrAp3x/MeshCentral-Sample/tags",
   "meshCentralCompat": ">=0.4.4-s"
 }
